--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -15,6 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemailer": "^6.9.16"
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
+    "soap": "^1.1.7"
   }
 }
